# sill

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  development.md  feature_request.md
.github/workflows/: release.yaml  test.yaml
src/sill/: __init__.py  _api.py  _auth.py
src/sill/utils/: __init__.py  _batched.py
test/: test_auth.py  test_batch_request.py  test_quickpickdeal.py
test/quickpickdeal/: api.py  auth.py
