[project]
name = "sill"
version = "0.2.0"
description = "sill: simple internet lookup library"
readme = "README.md"
authors = [
    { name = "Adrian Nilsson", email = "adrian.nilsson@fcc.chalmers.se" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
